little correction  with gap between the images

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -291,6 +291,7 @@ p {
   .wrapper {
     /* width: 100%; */
     margin: 39px;
+    position: relative;
   }
 
   .container .row:nth-child(1) {
@@ -314,9 +315,6 @@ p {
     border-radius: 20px;
 
     margin-bottom: 39px;
-
-    position: relative;
-    left: 5%;
   }
 
   .tablet {
@@ -343,12 +341,11 @@ p {
     /* margin: auto; */
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
     border-radius: 20px;
 
-    min-width: 250px;
-    min-height: 100px;
-
-    object-fit: cover;
+    min-width: 220px;
+    min-height: 200px;
 
     background-image: url(../tablet/image-phone-and-keyboard.jpg);
   }
@@ -356,8 +353,9 @@ p {
   .keyboard-mouse {
     background-image: url(../tablet/image-glass-and-keyboard.jpg);
     background-size: cover;
+    background-repeat: no-repeat;
     min-width: 400px;
-    min-height: 400px;
+    min-height: 350px;
 
     background-position: center;
     object-fit: cover;
